[package]
name = "yulong"
version = "0.1.0"
authors = ["Yiqing Zhu <yiqing_zhu2015@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "network",
    "transport/tcp",
    "transport/quic",
    "applications/test/tcp_client",
    "applications/test/tcp_server",
    "applications/bdn",
    "applications/pbft",
]