[package]
name = "core"
version = "0.1.0"
authors = ["Yiqing Zhu <yiqing_zhu2015@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsm = "0.3.0"
prost = "0.7"
prost-types = "0.7.0"
rand = "0.8.3"

[build-dependencies]
prost-build = "0.7.0"