[package]
name = "yulong_bdn"
version = "0.1.0"
authors = ["Yiqing Zhu <yiqing_zhu2015@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yulong = {path = "../../"}
yulong_network = {path = "../../network"}
yulong_tcp = {path = "../../transport/tcp"}
yulong_quic = {path = "../../transport/quic"}
futures = "0.3.8"
async-std = {version = "1.10.0", features = ["attributes", "tokio1", "unstable"]}
async-trait = "0.1.51"
prost = "0.7"
prost-types = "0.7.0"
log = "0.4.14"
num-traits = "0.2"
num-derive = "0.3"
rayon = "1.5.1"
bytes = "1.1.0"


[build-dependencies]
prost-build = "0.7.0"