[package]
name = "yulong_quic"
version = "0.1.0"
authors = ["Quin <bureaucratic@yeah.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yulong = {path = "../../"}
yulong_network = {path = "../../network"}

tokio = {version = "1.11.0", features = ["full"]}
futures = "0.3.8"
async-trait = "0.1.51"
quinn = "0.7"
directories-next = "2"
rand = "0.8"
rcgen = "0.8"
log = "0.4"