[package]
name = "yulong_tcp"
version = "0.1.0"
authors = ["Yiqing Zhu <yiqing_zhu2015@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yulong_network = {path = "../../network"}

tokio = {version = "1.11.0", features = ["net"]}
futures = "0.3.8"
async-trait = "0.1.51"

log = "0.4.14"