[package]
name = "tcp_client"
version = "0.1.0"
authors = ["Yiqing Zhu <yiqing_zhu2015@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yulong_network = {path = "../../../network"}
yulong_tcp = {path = "../../../transport/tcp"}
yulong_quic = {path = "../../../transport/quic"}
futures = "0.3.8"
async-std = {version = "1.10.0", features = ["attributes", "tokio1"]}